src/objects/DRE__DREObjectSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows activation/deactivation of DRE for objects</description>
    <fields>
        <fullName>DRE__Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of records to be processed in each batch when DRE is running in Bulk Mode</description>
        <inlineHelpText>Number of records to be processed in each batch when DRE is running in Bulk Mode</inlineHelpText>
        <label>Bulk Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Bulk_Threshold__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Maximum number of records DRE should process without kicking into Bulk Mode. Any more than this number will enable Bulk Mode (asynchronous processing). This setting is applied only if Auto-Bulk is enabled in DRE Settings</description>
        <inlineHelpText>Maximum number of records DRE should process without kicking into Bulk Mode. Any more than this number will enable Bulk Mode (asynchronous processing). This setting is applied only if Auto-Bulk is enabled in DRE Settings</inlineHelpText>
        <label>Bulk Threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Trigger_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected DRE will execute when changes are made to this object</description>
        <inlineHelpText>If selected DRE will execute when changes are made to this object</inlineHelpText>
        <label>Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__View_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected DRE will execute when this object is viewed (for View rules)</description>
        <inlineHelpText>If selected DRE will execute when this object is viewed (for View rules)</inlineHelpText>
        <label>View Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>DRE Object Settings</label>
    <listViews>
        <fullName>DRE__All</fullName>
        <columns>NAME</columns>
        <columns>DRE__Bulk_Threshold__c</columns>
        <columns>DRE__Batch_Size__c</columns>
        <columns>DRE__View_Enabled__c</columns>
        <columns>DRE__Trigger_Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>